--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -24,7 +24,7 @@
     </div>
 
     <div>
-        <a href="/">torna all'home page</a>
+        <a th:href="@{/}">torna all'home page</a>
     </div>
     
 </body>
