--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -1,51 +1,57 @@
 <!DOCTYPE html>
-<head>
-    <title>Cuoco Details</title>
-</head>
-<body>
-    <h1>Dettagli del Cuoco</h1>
     
-    <div th:if="${cuoco.immagini}">
-        <img th:if="${cuoco.getFirstImmagine() != null}" th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}" width="30%"/>
-    </div>
-    
-    
-    <div>
-        <h2 th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}"></h2>
-        <p th:text="'Data di Nascita: ' + ${cuoco.dataNascita}"></p>
-    </div>
-    
-    <div>
-        <h3>Ricette Proposte</h3>
-        <div th:if="${#lists.isEmpty(cuoco.ricette)}">
-            <p>Non ci sono attualmente ricette per questo cuoco</p>
-        </div>
-        <ul th:unless="${#lists.isEmpty(cuoco.ricette)}">
-            <li th:each="ricetta : ${cuoco.ricette}">
-                <span th:text="${ricetta.nome}"></span>
-            </li>
-        </ul>
-    </div>
+    <head>
+        <title>Cuoco Details</title>
+    </head>
 
-    <div th:if="${userDetails}">
-        <div>
-            <a th:href="@{/admin/editCuoco/{id}(id=${cuoco.id})}">ADMIN EDIT CUOCO</a>    
+    <body>
+        <h1>Dettagli del Cuoco</h1>
+        
+        <!-- se ci sono foto le mostro tutte -->
+        <div th:if="${cuoco.hasImmagini() == true}">
+            <span th:each=" immagine : ${cuoco.immagini}">
+                <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}" width="30%"/>
+            </span>
         </div>
+        
+        <!-- dati del cuoco -->
         <div>
-            <a th:href="@{/admin/deleteCuoco/{id}(id=${cuoco.id})}">ADMIN DELETE CUOCO</a>    
+            <h2 th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}"></h2>
+            <p th:text="'Data di Nascita: ' + ${cuoco.dataNascita}"></p>
         </div>
+        
+        <!-- ricette del cuoco -->
         <div>
-            <a th:href="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}">ADMIN ADD RICETTA</a>    
+            <h3>Ricette Proposte</h3>
+            <div th:if="${#lists.isEmpty(cuoco.ricette)}">
+                <p>Non ci sono attualmente ricette per questo cuoco</p>
+            </div>
+            <ul th:unless="${#lists.isEmpty(cuoco.ricette)}">
+                <li th:each="ricetta : ${cuoco.ricette}">
+                    <span th:text="${ricetta.nome}"></span>
+                </li>
+            </ul>
         </div>
-    </div>
-    <div th:unless="${userDetails}">
-        <h3>loggati per avere accesso alle operazioni</h3>
-    </div>
 
-    
+        <div th:if="${userDetails}">
+            <div>
+                <a th:href="@{/admin/editCuoco/{id}(id=${cuoco.id})}">EDIT CUOCO</a>    
+            </div>
+            <div>
+                <a th:href="@{/admin/deleteCuoco/{id}(id=${cuoco.id})}">DELETE CUOCO</a>    
+            </div>
+            <div>
+                <a th:href="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}">ADD RICETTA</a>    
+            </div>
+        </div>
 
-    <div>
-        <a th:href="@{/cuochi}">torna alla lista dei cuochi</a>    
-    </div>
-</body>
+        <div th:unless="${userDetails}">
+            <h3>loggati per avere accesso alle operazioni</h3>
+        </div>
+        
+        <div>
+            <a th:href="@{/cuochi}">torna alla lista dei cuochi</a>    
+        </div>
+    </body>
+
 </html>
