--- a/siw_food/src/main/resources/templates/logged/formEditRicetta.html
+++ b/siw_food/src/main/resources/templates/logged/formEditRicetta.html
@@ -5,10 +5,11 @@
 </head>
 
 <body>
-<!-- qui mostro i dati relativi alla ricetta -->
-
-    <div th:if="${ricetta.immagini}">
-        <img th:if="${ricetta.getFirstImmagine() != null}" th:src="'data:image/jpeg;base64,' + ${ricetta.getFirstImmagine().getBase64()}" width="30%"/>
+    <!-- qui mostro i dati relativi alla ricetta -->
+    <div th:if="${ricetta.hasImmagini() == true}">
+        <span th:each=" immagine : ${ricetta.immagini}">
+            <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}" width="30%"/>
+        </span>
     </div>
 
     <div>
@@ -16,9 +17,10 @@
         <p th:text="${ricetta.descrizione}">Descrizione della Ricetta</p>
     </div>
 
+    <!--
     <div>
         <p th:text="${ricetta.cuoco.nome}">nome cuoco</p>
-    </div>
+    </div> -->
     
     <div>
         <h3>Ingredienti</h3>
@@ -27,35 +29,40 @@
         </div>
         <ul>
             <li th:each="ingrediente : ${ricetta.ingredienti}">
-                <span th:text="${ingrediente.nome}">Nome Ingrediente</span> 
-                <span th:text="${ingrediente.quantita}">Quantità Ingrediente</span>
+                <form th:action="@{/admin/deleteIngrediente/{ricetta_id}/{ingrediente_id}(ricetta_id=${ricetta.id},ingrediente_id=${ingrediente.id})}" method="post">
+                    <div>
+                        <span th:text="${ingrediente.nome}">Nome Ingrediente</span> 
+                        <span th:text="${ingrediente.quantita}">Quantità Ingrediente</span>
+                        <button type="submit">Elimina</button>
+                    </div>
+                </form>
             </li>
         </ul>
     </div>
 
-<!-- qui metto il form che fa la conferma quindi fine  -->
-<form th:action="@{/admin/editRicetta/{ricetta_id}/{cuoco_id}(ricetta_id=${ricetta.id},cuoco_id=${ricetta.cuoco.id})}" enctype="multipart/form-data" th:object="${ricetta}" method="post">
-        
+    <!-- qui metto il form che fa la conferma quindi fine  -->
+    <form th:action="@{/admin/editRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}" enctype="multipart/form-data" method="post" th:object="${ricetta}">
+            
+        <div>
+            <label for="nome">Nome:</label>
+            <input type="text" id="nome" th:field="*{nome}" >
+        </div>
+    
     <div>
-       <label for="nome">Nome:</label>
-       <input type="text" id="nome" th:field="*{nome}" />
-   </div>
-   
-   <div>
-       <label for="descrizione">Descrizione:</label>
-       <input type="text" id="descrizione" th:field="*{descrizione}" />
-   </div>
-   
-   <div>
-       <label for="immagine">Immagine:</label>
-       <input type="file" id="immagine" name="immagine" accept="image/*">
-   </div>
+        <label for="descrizione">Descrizione:</label>
+        <input type="text" id="descrizione" th:field="*{descrizione}" >
+    </div>
+    
+    <div>
+        <label for="immagine">Immagine:</label>
+        <input type="file" id="immagine" name="immagine" accept="image/*">
+    </div>
 
-   <div>
-       <button type="submit">Save</button>
-   </div>
+    <div>
+        <button type="submit">Save</button>
+    </div>
 
-</form>
+    </form>
 
 
 <!-- qui metto il form che fa l'aggiunta di un ingrediente mi riporta a questa pagina  -->
