--- a/siw_food/src/main/resources/templates/logged/formEditCuoco.html
+++ b/siw_food/src/main/resources/templates/logged/formEditCuoco.html
@@ -4,7 +4,7 @@
 </head>
 <body>
     <h1>Modifica Cuoco</h1>
-    <form action="#" th:action="@{/admin/editCuoco/{id}(id=${cuoco.id})}" th:object="${cuoco}" method="post">
+    <form th:action="@{/admin/editCuoco/{id}(id=${cuoco.id})}" enctype="multipart/form-data" method="post" th:object="${cuoco}">
         <div>
             <label for="nome">Nome:</label>
             <input type="text" id="nome" th:field="*{nome}" />
@@ -17,8 +17,10 @@
             <label for="dataNascita">Data di Nascita:</label>
             <input type="date" id="dataNascita" th:field="*{dataNascita}" />
         </div>
-        <!--DEVO METTERE LA PARTE DELLA FOTO OPPURE FARE IN MODO CHE I CAMPI NON
-        COMPILATI SIANO SALVATI CON I VECCHI DATI-->
+        <div>
+            <label for="immagine">Immagine:</label>
+            <input type="file" id="immagine" name="immagine" accept="image/*">
+        </div>
         <div>
             <button type="submit">Salva</button>
         </div>
