--- a/siw_food/src/main/resources/templates/cuoco.html
+++ b/siw_food/src/main/resources/templates/cuoco.html
@@ -1,3 +1,5 @@
+<!--
+
 <!DOCTYPE html>
     
     <head>
@@ -7,20 +9,20 @@
     <body>
         <h1>Dettagli del Cuoco</h1>
         
-        <!-- se ci sono foto le mostro tutte -->
+         se ci sono foto le mostro tutte 
         <div th:if="${cuoco.hasImmagini() == true}">
             <span th:each=" immagine : ${cuoco.immagini}">
                 <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}" width="30%"/>
             </span>
         </div>
         
-        <!-- dati del cuoco -->
+         dati del cuoco 
         <div>
             <h2 th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}"></h2>
             <p th:text="'Data di Nascita: ' + ${cuoco.dataNascita}"></p>
         </div>
         
-        <!-- ricette del cuoco -->
+         ricette del cuoco 
         <div>
             <h3>Ricette Proposte</h3>
             <div th:if="${#lists.isEmpty(cuoco.ricette)}">
@@ -53,5 +55,130 @@
             <a th:href="@{/cuochi}">torna alla lista dei cuochi</a>    
         </div>
     </body>
+
+</html>  -->
+
+
+<!DOCTYPE html>
+<!-- Source Codes By CodingNepal - www.codingnepalweb.com -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SiwFood Cuoco</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="/css/home.css" />
+    <!-- Box Icon Link for Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+
+    <header>
+        <nav>
+          <div class="nav_logo">
+            <a href="#">
+              <img src="image/food_logo.jpg" alt="SiwFood Logo" />
+              <h2>Siw Food</h2>
+            </a>
+          </div>
+          <input type="checkbox" id="click" />
+          <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+          </label>
+          <ul>
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/cuochi}">Cuochi</a></li>
+            <li><a th:href="@{/ricette}">Ricette</a></li>
+            <li><a th:href="@{/cerca}">Search</a></li>
+            <!--se sei loggato-->
+            <li><a th:href="@{/admin/addRicetta/{cuoco_id}(cuoco_id=${cuoco.id})}" th:if="${userDetails}">Aggiungi Ricetta</a></li>
+          </ul>
+        </nav>
+    </header>
+
+    <!-- About Us Section La uso per la descrizione e gli ingredienti-->
+    <section class="about_us" id="about">
+        <div class="section_container">
+          <div class="about_container">
+            <div class="text_section">
+              <h2 class="section_title" th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}">Cuoco</h2>
+              <p>
+                Ricette Proposte :
+              </p>
+              <!-- qui devo mettere tutte le ricette -->
+              <div th:if="${#lists.isEmpty(cuoco.ricette)}">
+                <p>Non ci sono attualmente ricette per questo cuoco</p>
+              </div>
+              <div th:unless="${#lists.isEmpty(cuoco.ricette)}">
+                <ul>
+                    <li th:each="ricetta : ${cuoco.ricette}">
+                        <a th:href="@{/ricette/{id}(id=${ricetta.id})}"><span th:text="${ricetta.nome}">Nome Ricetta</span></a>
+                    </li>
+                  </ul>
+              </div>
+            </div>
+            <div class="image_section" th:if="${cuoco.hasImmagini() == true}">
+                <img th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}"/>
+            </div> 
+          </div>
+        </div>
+      </section>
+
+      <footer>
+        <div class="section_container">
+          <div class="footer_section">
+            <div class="footer_logo">
+              <a href="index.html">
+                <img src="image/food_logo.jpg" alt="Siw Food Logo" />
+                <h2>Siw Food</h2>
+              </a>
+            </div>
+            <div class="useful_links">
+              <h3>Useful Links</h3>
+              <ul>
+                <li><a th:href="@{/}">Home</a></li>
+                <li><a th:href="@{/cuochi}">Cuochi</a></li>
+                <li><a th:href="@{/ricette}">Ricette</a></li>
+                <li><a th:href="@{/cerca}">Search</a></li>
+              </ul>
+            </div>
+            <div class="contact_us">
+              <h3>Contact</h3>
+              <ul>
+                <!--
+                <li>
+                  <i class="bx bx-current-location"></i>
+                  <span>Berndorf, Germany</span>
+                </li> -->
+                <li>
+                  <i class="bx bxl-gmail"></i> <span>andrealippo01@gmail.com</span>
+                </li>
+                <li>
+                  <i class="bx bxl-gmail"></i> <span>and.lippucci@stud.uniroma3.it</span>
+                </li>
+                <!--
+                <li>
+                  <i class="bx bxs-time-five"></i>
+                  <span>Mon-Sun : 10:00 AM - 7:00 PM</span>
+                </li> -->
+              </ul>
+            </div>
+            <div class="follow_us">
+              <h3>Follow</h3>
+              <i class="bx bxl-facebook-circle"></i>
+              <i class="bx bxl-twitter"></i>
+              <i class="bx bxl-instagram-alt"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
+
+
+  </body>
 
 </html>
