--- a/siw_food/src/main/resources/templates/error/errorPage.html
+++ b/siw_food/src/main/resources/templates/error/errorPage.html
@@ -8,10 +8,10 @@
    <body>
       <div id="error-page">
          <div class="content">
-            <h2 class="header" data-text="ERROR">
-               ERROR
+            <h2 class="header" data-text="error">
+               error
             </h2>
-            <h4 data-text="Opps! Page not found">
+            <h4 data-text="">
                la pagina non esiste o non hai i permessi per effettuare questa operazione
             </h4>
             <p>
