--- a/siw_food/src/main/resources/static/css/home.css
+++ b/siw_food/src/main/resources/static/css/home.css
@@ -228,7 +228,15 @@ label .close_btn {
 }
 
 .about_container .text_section p {
-    font-size: 18px;
+    font-size: 20px;
+    font-weight: 500;
+    letter-spacing: 1px;
+    line-height: 30px;
+    text-align: center;
+}
+
+.about_container .text_section p ul {
+    font-size: 14px;
     font-weight: 500;
     letter-spacing: 1px;
     line-height: 30px;
