--- a/siw_food/src/main/resources/templates/auth/login.html
+++ b/siw_food/src/main/resources/templates/auth/login.html
@@ -11,7 +11,7 @@
   <div class="login_form">
     <!-- Login form container -->
     <form th:action="@{/login}" method="post">
-      <h3>Log in with</h3>
+      <h3>Log In</h3>
       <div class="login_option">
         <!-- Google button 
         <div class="option">
