--- a/siw_food/src/main/resources/templates/auth/register.html
+++ b/siw_food/src/main/resources/templates/auth/register.html
@@ -11,7 +11,7 @@
   <div class="login_form">
     <!-- Login form container -->
     <form th:action="@{/register}" method="post" enctype="multipart/form-data" th:object="${cuoco}">
-      <h3>Log in with</h3>
+      <h3>Sign In</h3>
       <!-- Login option separator -->
       <p class="separator">
         <span>or</span>
