--- a/siw_food/src/main/resources/templates/cuochi.html
+++ b/siw_food/src/main/resources/templates/cuochi.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 <html>
 <head>
@@ -28,4 +29,65 @@
     </div>
     
 </body>
+</html>  -->
+
+<!DOCTYPE html>
+<!-- Source Codes By CodingNepal - www.codingnepalweb.com -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SiwFood Cuochi</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="/css/home.css" />
+    <!-- Box Icon Link for Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+
+    <header>
+        <nav>
+          <div class="nav_logo">
+            <a href="#">
+              <img src="image/food_logo.jpg" alt="SiwFood Logo" />
+              <h2>Siw Food</h2>
+            </a>
+          </div>
+          <input type="checkbox" id="click" />
+          <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+          </label>
+          <ul>
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/cuochi}">Cuochi</a></li>
+            <li><a th:href="@{/ricette}">Ricette</a></li>
+            <li><a th:href="@{/cerca}">Search</a></li>
+          </ul>
+        </nav>
+      </header>
+
+    <!-- Services Section -->
+    <section class="services" id="service">
+        <h2 class="section_title">CUOCHI</h2>
+        <div class="section_container">
+          <div class="service_container">
+            <div class="services_items" th:each="cuoco : ${cuochi}">
+              <img th:if="${cuoco.hasImmagini() == true}" th:src="'data:image/jpeg;base64,' + ${cuoco.getFirstImmagine().getBase64()}"/>
+              <div class="services_text" >
+                <a th:href="@{/cuochi/{id}(id=${cuoco.id})}"><h3 th:text="${cuoco.nome} + ' ' + ${cuoco.cognome}">nome cuoco</h3></a>
+                <!--<p>
+                  Wide range of Steaming hot coffees to make you fresh and light.
+                </p>-->
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+  </body>
+
 </html>
