--- a/siw_food/src/main/resources/templates/logged/formEditRicetta.html
+++ b/siw_food/src/main/resources/templates/logged/formEditRicetta.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 
 <head>
@@ -5,7 +6,7 @@
 </head>
 
 <body>
-    <!-- qui mostro i dati relativi alla ricetta -->
+     qui mostro i dati relativi alla ricetta 
     <div th:if="${ricetta.hasImmagini() == true}">
         <span th:each=" immagine : ${ricetta.immagini}">
             <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}" width="30%"/>
@@ -17,10 +18,10 @@
         <p th:text="${ricetta.descrizione}">Descrizione della Ricetta</p>
     </div>
 
-    <!--
+    
     <div>
         <p th:text="${ricetta.cuoco.nome}">nome cuoco</p>
-    </div> -->
+    </div> 
     
     <div>
         <h3>Ingredienti</h3>
@@ -40,7 +41,7 @@
         </ul>
     </div>
 
-    <!-- qui metto il form che fa la conferma quindi fine  -->
+     qui metto il form che fa la conferma quindi fine  
     <form th:action="@{/admin/editRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}" enctype="multipart/form-data" method="post" th:object="${ricetta}">
             
         <div>
@@ -65,7 +66,7 @@
     </form>
 
 
-<!-- qui metto il form che fa l'aggiunta di un ingrediente mi riporta a questa pagina  -->
+ qui metto il form che fa l'aggiunta di un ingrediente mi riporta a questa pagina  
     <form th:action="@{/admin/addIngrediente/{ricetta_id}(ricetta_id=${ricetta.id})}" th:object="${ingrediente}" method="post">
 
         <div>
@@ -84,6 +85,115 @@
 
 </body>
 
+</html>  -->
 
+
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SiwFood Ricetta</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="/css/home.css" />
+    <!-- Box Icon Link for Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+    <header>
+        <nav>
+          <div class="nav_logo">
+            <a href="#">
+              <img src="image/food_logo.jpg" alt="SiwFood Logo" />
+              <h2>Siw Food</h2>
+            </a>
+          </div>
+          <input type="checkbox" id="click" />
+          <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+          </label>
+          <ul>
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/cuochi}">Cuochi</a></li>
+            <li><a th:href="@{/ricette}">Ricette</a></li>
+            <li><a th:href="@{/cerca}">Search</a></li>
+          </ul>
+        </nav>
+      </header>
+
+    <!-- About Us Section La uso per la descrizione e gli ingredienti-->
+    <section class="about_us" id="about">
+      <div class="section_container">
+        <div class="about_container">
+          <div class="text_section">
+            <h2 class="section_title" th:text="${ricetta.nome}">Nome Ricetta</h2>
+            <p th:text="${ricetta.descrizione}">
+              descrizione ricetta
+            </p>
+          </div>
+          <div class="image_section">
+            <h2>Ingredienti :</h2>
+            <div th:if="${#lists.isEmpty(ricetta.ingredienti)}">
+              <p>Non ci sono attualmente ingredienti per questa ricetta</p>
+            </div>
+            <ul th:unless="${#lists.isEmpty(ricetta.ingredienti)}">
+              <li th:each="ingrediente : ${ricetta.ingredienti}">
+                  <span th:text="${ingrediente.nome} + ':' + ${ingrediente.quantita}">Nome Ingrediente</span>
+              </li>
+            </ul>
+          </div> 
+        </div>
+      </div>
+    </section>
+
+    <!-- Contact Section -->
+    <section class="contact" id="contact">
+        <div class="text_section">
+            <h2 class="section_title">Modifica Ricetta</h2>
+        </div>
+    <!--    <h2 class="section_title">Search Form</h2>  -->
+        <div class="section_container">
+          <div class="contact_container">
+            <div class="contact_form">
+                <p>Aggiungi ingredienti o modifica la ricetta </p>
+              <!--form per la modifica di ricetta -->
+              <form th:action="@{/admin/editRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}" enctype="multipart/form-data" method="post" th:object="${ricetta}">
+                <div class="field">
+                  <label for="nome">Modifica Nome Ricetta</label>
+                  <input type="text" id="nome" placeholder="Nuovo Nome" th:field="*{nome}"/>
+                </div>
+                <div class="field">
+                    <label for="descrizione">Modifica Descrizione Ricetta</label>
+                    <input type="text" id="descrizione" placeholder="Nuova Descrizione" th:field="*{descrizione}"/>
+                </div>
+                <div class="field">
+                    <label for="immagine">Immagine:</label>
+                    <input type="file" id="immagine" name="immagine" accept="image/*">
+                </div>
+                <button class="button" id="submit">Modifica</button>
+              </form>
+              <!-- form per l'aggiunta di un ingrediente -->
+              <form th:action="@{/admin/addIngrediente/{ricetta_id}(ricetta_id=${ricetta.id})}" th:object="${ingrediente}" method="post">
+                <div class="field">
+                    <label for="nome">Nome Ingrediente:</label>
+                    <input type="text" id="nome" th:field="*{nome}" placeholder="Nome Ingrediente" required />
+                </div>
+                <div class="field">
+                    <label for="quantita">Quantità:</label>
+                    <input type="text" id="quantita" th:field="*{quantita}" placeholder="Quantità Ingrediente" required />
+                </div>
+                <button class="button" id="submit">Aggiungi</button>
+              </form>
+            </div>
+          </div>
+        </div>
+      </section>
+
+  </body>
 
 </html>
