--- a/siw_food/src/main/resources/templates/ricetta.html
+++ b/siw_food/src/main/resources/templates/ricetta.html
@@ -1,185 +1,82 @@
 <!DOCTYPE html>
-<html>
-<head>
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<style>
-* {box-sizing: border-box}
-body {font-family: Verdana, sans-serif; margin:0}
-.mySlides {display: none}
-img {vertical-align: middle;}
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SiwFood Ricetta</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="/css/home.css" />
+    <!-- Box Icon Link for Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
 
-/* Slideshow container */
-.slideshow-container {
-  max-width: 1000px;
-  position: relative;
-  margin: auto;
-}
+  <body>
+    <header>
+        <nav>
+          <div class="nav_logo">
+            <a href="#">
+              <img src="image/food_logo.jpg" alt="SiwFood Logo" />
+              <h2>Siw Food</h2>
+            </a>
+          </div>
+          <input type="checkbox" id="click" />
+          <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+          </label>
+          <ul>
+            <!--se non sei loggato-->
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/ricette}">Ricette</a></li>
+            <li><a th:href="@{/cerca}">Search</a></li>
+            <!--se sei loggato-->
+            <li><a th:href="@{/admin/editRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}" th:if="${userDetails}">Modifica Ricetta</a></li>
+            <li><a th:href="@{/admin/deleteRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}"th:if="${userDetails}">Elimina Ricetta</a></li>
+          </ul>
+        </nav>
+      </header>
 
-/* Next & previous buttons */
-.prev, .next {
-  cursor: pointer;
-  position: absolute;
-  top: 50%;
-  width: auto;
-  padding: 16px;
-  margin-top: -22px;
-  color: white;
-  font-weight: bold;
-  font-size: 18px;
-  transition: 0.6s ease;
-  border-radius: 0 3px 3px 0;
-  user-select: none;
-}
-
-/* Position the "next button" to the right */
-.next {
-  right: 0;
-  border-radius: 3px 0 0 3px;
-}
-
-/* On hover, add a black background color with a little bit see-through */
-.prev:hover, .next:hover {
-  background-color: rgba(0,0,0,0.8);
-}
-
-/* Caption text */
-.text {
-  color: #f2f2f2;
-  font-size: 15px;
-  padding: 8px 12px;
-  position: absolute;
-  bottom: 8px;
-  width: 100%;
-  text-align: center;
-}
-
-/* Number text (1/3 etc) */
-.numbertext {
-  color: #f2f2f2;
-  font-size: 12px;
-  padding: 8px 12px;
-  position: absolute;
-  top: 0;
-}
-
-/* The dots/bullets/indicators */
-.dot {
-  cursor: pointer;
-  height: 15px;
-  width: 15px;
-  margin: 0 2px;
-  background-color: #bbb;
-  border-radius: 50%;
-  display: inline-block;
-  transition: background-color 0.6s ease;
-}
-
-.active, .dot:hover {
-  background-color: #717171;
-}
-
-/* Fading animation */
-.fade {
-  animation-name: fade;
-  animation-duration: 1.5s;
-}
-
-@keyframes fade {
-  from {opacity: .4} 
-  to {opacity: 1}
-}
-
-/* On smaller screens, decrease text size */
-@media only screen and (max-width: 300px) {
-  .prev, .next,.text {font-size: 11px}
-}
-</style>
-</head>
-<body>
-    <h1>Dettagli della Ricetta</h1>
-
-    
-
-    <!-- prova carosello -->
-    <div class="slideshow-container" th:if="${ricetta.hasImmagini() == true}">
-
-        <div class="mySlides fade" th:each=" immagine : ${ricetta.immagini}">
-          <div class="numbertext" th:text="${immagine.getFileName()}"></div>
-          <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}" style="width:100%">
-          <div class="text">Caption Text</div>
+      <!-- Gallery Section La uso per mostrare le foto della ricetta -->
+    <section class="gallery" id="gallery">
+      <h2 class="section_title" th:text="${ricetta.nome}">Titolo Ricetta</h2>
+      <div class="section_container">
+        <div class="gallery_container" th:if="${ricetta.hasImmagini() == true}">
+          <div class="gallery_items" th:each = "immagine : ${ricetta.immagini}">
+            <img th:src="'data:image/jpeg;base64,' + ${immagine.getBase64()}"/>
+          </div>
         </div>
-        
-        <a class="prev" onclick="plusSlides(-1)">❮</a>
-        <a class="next" onclick="plusSlides(1)">❯</a>
-        
+      </div>
+    </section>
+
+    <!-- About Us Section La uso per la descrizione e gli ingredienti-->
+    <section class="about_us" id="about">
+      <div class="section_container">
+        <div class="about_container">
+          <div class="text_section">
+            <h2 class="section_title" th:text="${ricetta.cuoco.nome} + ' ' + ${ricetta.cuoco.cognome}">Cuoco</h2>
+            <p th:text="${ricetta.descrizione}">
+              descrizione ricetta
+            </p>
+          </div>
+          <div class="image_section">
+            <h2>Ingredienti :</h2>
+            <div th:if="${#lists.isEmpty(ricetta.ingredienti)}">
+              <p>Non ci sono attualmente ingredienti per questa ricetta</p>
+            </div>
+            <ul th:unless="${#lists.isEmpty(ricetta.ingredienti)}">
+              <li th:each="ingrediente : ${ricetta.ingredienti}">
+                  <span th:text="${ingrediente.nome} + ':' + ${ingrediente.quantita}">Nome Ingrediente</span>
+              </li>
+            </ul>
+          </div> 
         </div>
-        <br>
-        <!--
-        <div style="text-align:center">
-          <span class="dot" onclick="currentSlide(1)"></span> 
-          <span class="dot" onclick="currentSlide(2)"></span> 
-          <span class="dot" onclick="currentSlide(3)"></span> 
-        </div>  -->
-    
-    <div>
-        <h2 th:text="${ricetta.nome}">Nome della Ricetta</h2>
-        <p th:text="${ricetta.descrizione}">Descrizione della Ricetta</p>
-    </div>
-    
-    <div>
-        <h3>Ingredienti</h3>
-        <ul>
-            <li th:each="ingrediente : ${ricetta.ingredienti}">
-                <span th:text="${ingrediente.nome}">Nome Ingrediente</span> 
-                <span th:text="${ingrediente.quantita}">Quantità Ingrediente</span>
-            </li>
-        </ul>
-    </div>
+      </div>
+    </section>
 
-   
     
-    <div>
-        <h3>Proposta da</h3>
-        <p th:text="${ricetta.cuoco.nome} + ' ' + ${ricetta.cuoco.cognome}">Nome Cuoco</p>
-    </div>
-    
-    <div>
-        <a th:href="@{/admin/editRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}">Modifica la Ricetta</a>
-        <a th:href="@{/admin/deleteRicetta/{ricetta_id}(ricetta_id=${ricetta.id})}">Elimina la Ricetta</a>
-    </div>
+  </body>
 
-    <div>
-        <a th:href="@{/ricette}">Torna alla lista delle Ricette</a>
-    </div>
-
-    <script>
-        let slideIndex = 1;
-        showSlides(slideIndex);
-        
-        function plusSlides(n) {
-          showSlides(slideIndex += n);
-        }
-        
-        function currentSlide(n) {
-          showSlides(slideIndex = n);
-        }
-        
-        function showSlides(n) {
-          let i;
-          let slides = document.getElementsByClassName("mySlides");
-          let dots = document.getElementsByClassName("dot");
-          if (n > slides.length) {slideIndex = 1}    
-          if (n < 1) {slideIndex = slides.length}
-          for (i = 0; i < slides.length; i++) {
-            slides[i].style.display = "none";  
-          }
-          for (i = 0; i < dots.length; i++) {
-            dots[i].className = dots[i].className.replace(" active", "");
-          }
-          slides[slideIndex-1].style.display = "block";  
-          dots[slideIndex-1].className += " active";
-        }
-        </script>
-
-</body>
 </html>
