--- a/siw_food/src/main/resources/templates/ricette.html
+++ b/siw_food/src/main/resources/templates/ricette.html
@@ -1,3 +1,4 @@
+<!--
 <!DOCTYPE html>
 
 <head>
@@ -23,4 +24,113 @@
         <a th:href="@{/}">Torna alla Home</a>
     </div>
 </body>
+</html>  -->
+
+<!DOCTYPE html>
+<!-- Source Codes By CodingNepal - www.codingnepalweb.com -->
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>SiwFood Ricette</title>
+    <!-- CSS Link -->
+    <link rel="stylesheet" href="css/home.css" />
+    <!-- Box Icon Link for Icons -->
+    <link
+      href="https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css"
+      rel="stylesheet"
+    />
+  </head>
+
+  <body>
+
+    <header>
+        <nav>
+          <div class="nav_logo">
+            <a href="#">
+              <img src="image/food_logo.jpg" alt="SiwFood Logo" />
+              <h2>Siw Food</h2>
+            </a>
+          </div>
+          <input type="checkbox" id="click" />
+          <label for="click">
+            <i class="menu_btn bx bx-menu"></i>
+            <i class="close_btn bx bx-x"></i>
+          </label>
+          <ul>
+            <li><a th:href="@{/}">Home</a></li>
+            <li><a th:href="@{/cuochi}">Cuochi</a></li>
+            <li><a th:href="@{/ricette}">Ricette</a></li>
+            <li><a th:href="@{/cerca}">Search</a></li>
+          </ul>
+        </nav>
+      </header>
+
+    <!-- Services Section -->
+    <section class="services" id="service">
+        <h2 class="section_title">RICETTE</h2>
+        <div class="section_container">
+          <div class="service_container">
+            <div class="services_items" th:each="ricetta : ${ricette}">
+              <img th:if="${ricetta.hasImmagini() == true}" th:src="'data:image/jpeg;base64,' + ${ricetta.getFirstImmagine().getBase64()}"/>
+              <div class="services_text" >
+                <a th:href="@{/ricette/{id}(id=${ricetta.id})}"><h3 th:text="${ricetta.nome}">nome ricetta</h3></a>
+                <p th:text="'Proposta da: ' + ${ricetta.cuoco.nome} + ' ' + ${ricetta.cuoco.cognome}">Nome Cuoco</p>
+              </div>
+            </div>
+          </div>
+        </div>
+    </section>
+
+    
+    <footer>
+        <div class="section_container">
+          <div class="footer_section">
+            <div class="footer_logo">
+              <a href="index.html">
+                <img src="image/food_logo.jpg" alt="Siw Food Logo" />
+                <h2>Siw Food</h2>
+              </a>
+            </div>
+            <div class="useful_links">
+              <h3>Useful Links</h3>
+              <ul>
+                <li><a th:href="@{/}">Home</a></li>
+                <li><a th:href="@{/cuochi}">Cuochi</a></li>
+                <li><a th:href="@{/ricette}">Ricette</a></li>
+                <li><a th:href="@{/cerca}">Search</a></li>
+              </ul>
+            </div>
+            <div class="contact_us">
+              <h3>Contact</h3>
+              <ul>
+                <!--
+                <li>
+                  <i class="bx bx-current-location"></i>
+                  <span>Berndorf, Germany</span>
+                </li> -->
+                <li>
+                  <i class="bx bxl-gmail"></i> <span>andrealippo01@gmail.com</span>
+                </li>
+                <li>
+                  <i class="bx bxl-gmail"></i> <span>and.lippucci@stud.uniroma3.it</span>
+                </li>
+                <!--
+                <li>
+                  <i class="bx bxs-time-five"></i>
+                  <span>Mon-Sun : 10:00 AM - 7:00 PM</span>
+                </li> -->
+              </ul>
+            </div>
+            <div class="follow_us">
+              <h3>Follow</h3>
+              <i class="bx bxl-facebook-circle"></i>
+              <i class="bx bxl-twitter"></i>
+              <i class="bx bxl-instagram-alt"></i>
+            </div>
+          </div>
+        </div>
+      </footer>
+  </body>
+
 </html>
